# claimflow

./: README.md
ClaimFlow/: .gitignore  db.sqlite3  drawSQL-pgsql-export-2026-02-20.sql  main.py  manage.py  pyproject.toml
ClaimFlow/claimflow_backend/: asgi.py  settings.py  urls.py  wsgi.py
ClaimFlow/organization/: models.py
ClaimFlow/organization/api/v1/serializer/: org_serializer.py
ClaimFlow/organization/api/v1/views/: org_views.py
ClaimFlow/user/: admin.py  helpers.py  manager.py  models.py
ClaimFlow/user/api/: urls.py
ClaimFlow/user/api/v1/: urls.py
ClaimFlow/user/api/v1/serializer/: __init__.py  user.py  user_auth.py  users.py
ClaimFlow/user/api/v1/views/: user.py  user_auth.py  users.py
ClaimFlow/user/migrations/: 0001_initial.py
ClaimFlow/utils/: models.py  permission.py
